<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">RF Generation</string>
    <string name="login_header">Login</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="login_label">Login</string>
    <string name="folders_header">My Folders</string>
    <string name="stats_header">Statistics</string>
    <string name="all_folders_label">All Folders</string>
    <string name="owned_folders_label">Owned Folders</string>
    <string name="quick_search_header">Quick Search</string>
    <string name="pending_label">Now Loading&#8230;</string>
    <string name="unknown_console">"???"</string>
    <string name="logout_label">Logout</string>
    <string name="filters_label">Filters</string>
    <string name="home_label">Home</string>
    <string name="about_label"><u>What is RF Generation?</u></string>
    <string name="about_text">\
Founded in 2004, RF Generation is a group of collectors, gamers, writers,
and programmers devoted to bringing the gaming community the best coverage
of any and all things gaming related.\r\n\r\nSet up your collection at
RFGeneration.com to be able to access it on the go, or simply search the
huge game database to find a wealth of information, images, and more.
    </string>
    <string name="register_label"><u>Not a member? Register!</u></string>
    <string name="images_header">Images</string>
    <string name="image_front_label">Front</string>
    <string name="image_back_label">Back</string>
    <string name="image_screenshot_label">Screenshot</string>
    <string name="image_game_label">Game</string>
    <string name="image_manual_label">Manual</string>
    <string name="detail_header">Game Details</string>
    <string name="credits_header">Page Credits</string>
    <string name="add_to_folder_label">Add to Folder:</string>
    <string name="game_quantity_label">Quantity:</string>
    <string name="box_quantity_label">Boxes:</string>
    <string name="manual_quantity_label">Manuals:</string>
    <string name="no_folders_label">This game does not appear in any folders.</string>
    <string name="tools_header">Tools</string>
    <string name="random_label">Random Game</string>
    <style name="ButtonText">
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
</resources>