<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:orientation="vertical">
	
    <!-- Header -->
    <RelativeLayout 
	    android:layout_width="fill_parent" 
	    android:background="@drawable/bg" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="top">
    
		<ImageView 
			android:src="@drawable/left"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name" />	 
			
		<ProgressBar
		    android:id="@+id/game_progress"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="5dp"  />
			
	</RelativeLayout>
	
    <LinearLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_gravity="top" 
	    android:background="@drawable/splash" 
	    android:layout_marginTop="1dp" 
	    android:layout_marginBottom="1dp">

        <TextView
            android:id="@+id/game_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dip"
            android:textColor="@drawable/body"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="marquee" />
        
    </LinearLayout>
    
    <!-- Content -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

            <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:background="@drawable/body">
		        
	            <TextView
	                android:id="@+id/game_title"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textAppearance="?android:attr/textAppearanceLarge"
	                android:textColor="@drawable/splash"
	                android:textStyle="bold"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp" />
	            
	            <TextView
	                android:id="@+id/game_info"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@drawable/link"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp" />
	            
	            <View
	                android:layout_width="fill_parent"
	                android:layout_height="1dp"
	                android:background="@drawable/border"/>
            
            </LinearLayout>
            
            <!-- My Folders -->
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:background="@drawable/border" >

	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:layout_margin="1dip"
	                android:background="@drawable/body"
	                android:orientation="vertical" >
	                
	                <RelativeLayout
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content" >
	                    
		                <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:text="@string/folders_header"
		                    android:textAppearance="?android:attr/textAppearanceLarge"
		                    android:textColor="@drawable/splash"
		                    android:textStyle="bold"
		                    android:layout_marginLeft="5dp" />
		                
		                <ImageView
	                        android:id="@+id/add_game_button"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_alignParentRight="true"
	                        android:layout_centerVertical="true"
	                        android:layout_marginRight="5dp"
	                        android:clickable="true"
	                        android:src="@drawable/add" />
	                
	                </RelativeLayout>
	                
	                <View
	                    android:layout_width="fill_parent"
	                    android:layout_height="2dip"
	                    android:layout_marginBottom="5dip"
	                    android:layout_marginLeft="5dip"
	                    android:layout_marginRight="5dip"
	                    android:background="@drawable/splash" />
	                
	                <TableLayout
	                    android:id="@+id/game_folder_table"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:stretchColumns="0" >
	                    
                    </TableLayout>
	                
                </LinearLayout>
                
            </LinearLayout>
            
	        <!-- Images -->
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:background="@drawable/border" >

	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:layout_margin="1dip"
	                android:background="@drawable/body"
	                android:orientation="vertical" >
	                
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/images_header"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="@drawable/splash"
	                    android:textStyle="bold"
	                    android:layout_marginLeft="5dp" />
	                
	                <View
	                    android:layout_width="fill_parent"
	                    android:layout_height="2dip"
	                    android:layout_marginBottom="5dip"
	                    android:layout_marginLeft="5dip"
	                    android:layout_marginRight="5dip"
	                    android:background="@drawable/splash" />
	                
	                <HorizontalScrollView
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content" 
	                    android:paddingLeft="5dp"
						android:paddingRight="5dp"
						android:layout_marginBottom="5dip"
						android:scrollbars="none">
	                    
	                    <LinearLayout
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:orientation="horizontal" >

	                        <LinearLayout
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:background="@drawable/border" >
					            
		                        <TextView
		                            android:id="@+id/game_front_button"
		                            android:layout_width="wrap_content"
		                            android:layout_height="wrap_content"
		                            android:layout_marginLeft="1dip"
		                            android:layout_marginTop="1dip"
		                            android:layout_marginBottom="1dip"
		                            android:padding="5dp"
		                            android:textAppearance="?android:attr/textAppearanceLarge"
		                            android:text="@string/image_front_label"
		                            android:textColor="@drawable/border"
		                            android:background="@drawable/background" />
	                        
	                        </LinearLayout>
	                        
	                        <LinearLayout
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:background="@drawable/border" >
					            
		                        <TextView
		                            android:id="@+id/game_back_button"
		                            android:layout_width="wrap_content"
		                            android:layout_height="wrap_content"
		                            android:layout_marginLeft="1dip"
		                            android:layout_marginTop="1dip"
		                            android:layout_marginBottom="1dip"
		                            android:padding="5dp"
		                            android:textAppearance="?android:attr/textAppearanceLarge"
		                            android:text="@string/image_back_label"
		                            android:textColor="@drawable/border"
		                            android:background="@drawable/background" />
	                        
	                        </LinearLayout>
	                        
	                        <LinearLayout
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:background="@drawable/border" >
					            
		                        <TextView
		                            android:id="@+id/game_screenshot_button"
		                            android:layout_width="wrap_content"
		                            android:layout_height="wrap_content"
		                            android:layout_marginLeft="1dip"
		                            android:layout_marginTop="1dip"
		                            android:layout_marginBottom="1dip"
		                            android:padding="5dp"
		                            android:textAppearance="?android:attr/textAppearanceLarge"
		                            android:text="@string/image_screenshot_label"
		                            android:textColor="@drawable/border"
		                            android:background="@drawable/background" />
	                        
	                        </LinearLayout>
	                        
	                        <LinearLayout
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:background="@drawable/border" >
					            
		                        <TextView
		                            android:id="@+id/game_game_button"
		                            android:layout_width="wrap_content"
		                            android:layout_height="wrap_content"
		                            android:layout_marginLeft="1dip"
		                            android:layout_marginTop="1dip"
		                            android:layout_marginBottom="1dip"
		                            android:padding="5dp"
		                            android:textAppearance="?android:attr/textAppearanceLarge"
		                            android:text="@string/image_game_label"
		                            android:textColor="@drawable/border"
		                            android:background="@drawable/background" />
	                        
	                        </LinearLayout>
	                        
	                        <LinearLayout
					            android:layout_width="fill_parent"
					            android:layout_height="wrap_content"
					            android:background="@drawable/border" >
					            
		                        <TextView
		                            android:id="@+id/game_manual_button"
		                            android:layout_width="wrap_content"
		                            android:layout_height="wrap_content"
		                            android:layout_margin="1dip"
		                            android:padding="5dp"
		                            android:textAppearance="?android:attr/textAppearanceLarge"
		                            android:text="@string/image_manual_label"
		                            android:textColor="@drawable/border"
		                            android:background="@drawable/background" />
	                        
	                        </LinearLayout>
	                        							
                        </LinearLayout>
	                    
                    </HorizontalScrollView>
	                
                </LinearLayout>
                
            </LinearLayout>
            
	        <!-- Game Details -->
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:background="@drawable/border" >

	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:layout_margin="1dip"
	                android:background="@drawable/body"
	                android:orientation="vertical" >
	                
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/detail_header"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="@drawable/splash"
	                    android:textStyle="bold"
	                    android:layout_marginLeft="5dp" />
	                
	                <View
	                    android:layout_width="fill_parent"
	                    android:layout_height="2dip"
	                    android:layout_marginBottom="5dip"
	                    android:layout_marginLeft="5dip"
	                    android:layout_marginRight="5dip"
	                    android:background="@drawable/splash" />
	                
	                <TableLayout
	                    android:id="@+id/game_details_table"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	      				android:layout_marginLeft="5dip" 
	      				android:layout_marginRight="5dip"
	      				android:stretchColumns="1"
	      				android:shrinkColumns="1" >

                    </TableLayout>
	                
                </LinearLayout>
                
            </LinearLayout>
            
	        <!-- Page Credits -->
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dip"
	            android:background="@drawable/border" >

	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="fill_parent"
	                android:layout_margin="1dip"
	                android:background="@drawable/body"
	                android:orientation="vertical" >
	                
	                <TextView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/credits_header"
	                    android:textAppearance="?android:attr/textAppearanceLarge"
	                    android:textColor="@drawable/splash"
	                    android:textStyle="bold"
	                    android:layout_marginLeft="5dp" />
	                
	                <View
	                    android:layout_width="fill_parent"
	                    android:layout_height="2dip"
	                    android:layout_marginBottom="5dip"
	                    android:layout_marginLeft="5dip"
	                    android:layout_marginRight="5dip"
	                    android:background="@drawable/splash" />
	                
	                <LinearLayout
	                    android:id="@+id/game_credits_table"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginLeft="5dip"
	                    android:layout_marginRight="5dip"
	                    android:orientation="vertical" >
	                    
                    </LinearLayout>
	                
                </LinearLayout>
                
            </LinearLayout>
	        
        </LinearLayout>
        
    </ScrollView>
	
</LinearLayout>