<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="fill_parent" -->
<!--     android:layout_height="fill_parent" -->
<!--     android:orientation="vertical" -->
<!--     android:fillViewport="true"> -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:gravity="bottom"
        android:orientation="vertical" >
        
			<!-- Header -->
            <RelativeLayout 
                android:id="@+id/login_header"
			    android:layout_width="fill_parent" 
			    android:background="@drawable/bg" 
			    android:layout_height="wrap_content" 
			    android:layout_gravity="top"
			    android:layout_alignParentTop="true">
			    
			    <ImageView 
			    	android:src="@drawable/left"
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"/>

			    <ProgressBar
			        android:id="@+id/login_progress"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentRight="true"
				    android:layout_centerVertical="true"
				    android:layout_marginRight="5dp"
				    android:visibility="gone" />
			    
			</RelativeLayout>
			
			<!-- Footer -->
			<LinearLayout 
			    android:id="@+id/login_footer"
				android:layout_width="fill_parent" 
				android:orientation="vertical" 
				android:layout_gravity="bottom" 
				android:gravity="bottom" 
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true">
  	  
				<RelativeLayout 
				    android:layout_width="fill_parent" 
					android:layout_height="wrap_content" 
					android:background="@drawable/bg" >
    
    				<ImageView
						android:src="@drawable/right" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:layout_centerHorizontal="true"/>
      
				</RelativeLayout>
				
			</LinearLayout>
			
	        <!-- Content -->
	        <ScrollView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_above="@id/login_footer"
		        android:layout_below="@id/login_header"
		        android:layout_centerHorizontal="true" 
		        android:fillViewport="true">
				
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">

		        <!-- Use two LinearLayouts to create a border. -->
		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:layout_margin="25dip"
		            android:background="@drawable/border" >

		            <LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="fill_parent"
		                android:layout_margin="1dip"
		                android:background="@drawable/body"
		                android:orientation="vertical" >

		                <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dip"
		                    android:layout_marginRight="5dip"
		                    android:text="@string/login_header"
		                    android:textAppearance="?android:attr/textAppearanceLarge"
		                    android:textColor="@drawable/splash"
		                    android:textStyle="bold" />

		                <View
		                    android:layout_width="fill_parent"
		                    android:layout_height="2dip"
		                    android:layout_marginBottom="5dip"
		                    android:layout_marginLeft="5dip"
		                    android:layout_marginRight="5dip"
		                    android:background="@drawable/splash" />

		                <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dip"
		                    android:text="@string/username_label"
		                    android:textAppearance="?android:attr/textAppearanceMedium"
		                    android:textColor="@drawable/text" />

		                <EditText
		                    android:id="@+id/login_username"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:layout_margin="5dip"
		                    android:singleLine="true" />

		                <TextView
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginLeft="5dip"
		                    android:text="@string/password_label"
		                    android:textAppearance="?android:attr/textAppearanceMedium"
		                    android:textColor="@drawable/text" />

		                <EditText
		                    android:id="@+id/login_password"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:layout_margin="5dip"
		                    android:inputType="textPassword"
		                    android:singleLine="true" />

		                <Button
		                    android:id="@+id/login_button"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:layout_gravity="center"
		                    android:text="@string/login_label"
		                    android:textAppearance="?android:attr/textAppearanceMedium"
		                    android:layout_marginLeft="50dip"
		                    android:layout_marginRight="50dip" />
		                
		            </LinearLayout>
		            
		        </LinearLayout>
		        
		    </RelativeLayout>
			</ScrollView>
    </RelativeLayout>

<!-- </ScrollView> -->